--- a/index.html
+++ b/index.html
@@ -3,10 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css" />
-    <title>
-      Horiseon - Search Engine Optimization, Online Reputation Management and
-      Social Media Marketing
-    </title>
+    <title>Horiseon - SEO, ORM & SMM Services</title>
   </head>
 
   <body>
