changed content to div

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </nav>
     </header>
     <figure aria label="A team working together" class="hero"></figure>
-    <content>
+    <div>
       <section class="search-engine-optimization">
         <img
           src="./assets/images/search-engine-optimization.jpg"
@@ -73,7 +73,7 @@
           your lead generation.
         </p>
       </section>
-    </content>
+    </div>
     <aside class="benefits">
       <section class="benefit-lead">
         <h3>Lead Generation</h3>
