--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
     </header>
     <figure aria label="A team working together" class="hero"></figure>
     <div>
-      <section class="search-engine-optimization">
+      <section
+        id="search-engine-optimization"
+        class="search-engine-optimization"
+      >
         <img
           src="./assets/images/search-engine-optimization.jpg"
           class="float-left"
