--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         </ul>
       </nav>
     </header>
-    <figure aria label="A team working together" class="hero"></figure>
-    <div>
+    <figure aria-label="A team working together" class="hero"></figure>
+    <main>
       <section
         id="search-engine-optimization"
         class="search-engine-optimization"
@@ -76,7 +76,7 @@
           your lead generation.
         </p>
       </section>
-    </div>
+    </main>
     <aside class="benefits">
       <section class="benefit-lead">
         <h3>Lead Generation</h3>
